Updated arm control project setup

--- a/ArmControl/CMakeLists.txt
+++ b/ArmControl/CMakeLists.txt
@@ -167,13 +167,23 @@ endif()
 
 message(STATUS "Build type: ${CMAKE_BUILD_TYPE}")
 
-set(DEBUG_CONFIG "-O0 -fno-strict-aliasing -Wall -mavx2 -fsanitize=address -fsanitize=undefined -fsanitize=null -fsanitize=return ")
-set(RELEASE_CONFIG "-O3 -fno-strict-aliasing -Wall -mavx2 ")
+set(DEBUG_CONFIG "-fno-strict-aliasing;-Wall;-mavx2;-fsanitize=address;-fsanitize=undefined;-fsanitize=null;-fsanitize=return")
+set(RELEASE_CONFIG "-O3;-fno-strict-aliasing;-Wall;-mavx2")
 
 
 add_executable(ArmControl src/ArmControlNode.cpp)
-add_compile_options("$<$<CONFIG:Debug>: ${DEBUG_CONFIG}")
-add_compile_options("$<$<CONFIG:Debug>: ${RELEASE_CONFIG}")
+
+if (CMAKE_BUILD_TYPE STREQUAL "Debug")
+    target_compile_options(ArmControl PUBLIC "${DEBUG_CONFIG}")
+    target_link_libraries(ArmControl "-fsanitize=address;-fsanitize=undefined;-fsanitize=null;-fsanitize=return")
+elseif (CMAKE_BUILD_TYPE STREQUAL "Release")
+    target_compile_options(ArmControl PUBLIC "${RELEASE_CONFIG}")
+else()
+    message(SEND_ERROR "Unknown build type")
+endif()
+
+
+#target_compile_options(ArmControl PUBLIC ${DEBUG_CONFIG})
 target_link_libraries(ArmControl ${catkin_LIBRARIES})
 
 #############
