Direct arm control abstraction layer

--- a/ArmControl/CMakeLists.txt
+++ b/ArmControl/CMakeLists.txt
@@ -53,6 +53,7 @@ find_package(catkin REQUIRED COMPONENTS
 add_message_files(
   FILES
   ArmMotorData.msg
+  ProcessedControllerInput.msg
 )
 
 ## Generate services in the 'srv' folder
