--- a/DriveControl/CMakeLists.txt
+++ b/DriveControl/CMakeLists.txt
@@ -14,6 +14,7 @@ find_package(catkin REQUIRED COMPONENTS
     rospy
     std_msgs
     message_generation
+    joy
 )
 
 ## System dependencies are found with CMake's conventions
