--- a/DriveControl/CMakeLists.txt
+++ b/DriveControl/CMakeLists.txt
@@ -142,7 +142,7 @@ ${catkin_INCLUDE_DIRS}
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-# add_executable(${PROJECT_NAME}_node src/DriveControl_node.cpp)
+#add_executable(${PROJECT_NAME}_node src/DriveControl_node.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -159,8 +159,8 @@ ${catkin_INCLUDE_DIRS}
 #   ${catkin_LIBRARIES}
 # )
 
-add_executable(DriveControl src/drive_control_node.cpp)
-target_link_libraries(DriveControl ${catkin_LIBRARIES})
+add_executable(drive_control_node src/drive_control_node.cpp)
+target_link_libraries(drive_control_node ${catkin_LIBRARIES})
 
 #############
 ## Install ##
