Add Science and Power to internal serial bridge

--- a/EmbeddedBridge/CMakeLists.txt
+++ b/EmbeddedBridge/CMakeLists.txt
@@ -18,7 +18,11 @@ catkin_python_setup()
 ## Generate messages in the 'msg' folder
 add_message_files(
   FILES
+  DriveFeedback.msg
   PowerFeedback.msg
+  ScienceCmd.msg
+  ScienceFeedback.msg
+  CcdData.msg
 )
 
 generate_messages(
