Fix build and change file naming

--- a/human_control_interface/CMakeLists.txt
+++ b/human_control_interface/CMakeLists.txt
@@ -5,15 +5,29 @@ find_package(catkin REQUIRED COMPONENTS
   roscpp
   rospy
   std_msgs
+  message_generation
 )
 
 catkin_python_setup()
+
+add_message_files(
+  FILES
+  Joystick_input.msg
+  Gamepad_input.msg
+)
+
+generate_messages(
+  DEPENDENCIES
+  std_msgs
+)
 
 catkin_package(
   CATKIN_DEPENDS 
   roscpp
   rospy 
   std_msgs
+  message_runtime
+  LIBRARIES human_control_interface
 )
 
 catkin_install_python(PROGRAMS 
