--- a/drive_control/package.xml
+++ b/drive_control/package.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>DriveControl</name>
+  <name>drive_control</name>
   <version>0.0.0</version>
-  <description>The DriveControl package</description>
+  <description>The drive_control package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="nanjingchj@todo.todo">nanjingchj</maintainer>
+  <maintainer email="todo@todo.todo">todo</maintainer>
 
   <build_depend>message_generation</build_depend>
   <exec_depend>message_runtime</exec_depend>
