--- a/embedded_bridge/CMakeLists.txt
+++ b/embedded_bridge/CMakeLists.txt
@@ -32,7 +32,7 @@ catkin_package(
     roscpp
     rospy 
     std_msgs
-    LIBRARIES EmbeddedBridge
+    LIBRARIES embedded_bridge
     CATKIN_DEPENDS message_runtime
 )
 
