--- a/science_module/CMakeLists.txt
+++ b/science_module/CMakeLists.txt
@@ -21,7 +21,6 @@ add_message_files(
   ScienceCmd.msg
   ScienceFeedback.msg
   CcdData.msg
-  SciencePilot.msg
 )
 
 generate_messages(
@@ -40,5 +39,6 @@ catkin_package(
 
 catkin_install_python(PROGRAMS
   src/science_module_node.py
+  sim/science_sim.py
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
