--- a/arm_control/CMakeLists.txt
+++ b/arm_control/CMakeLists.txt
@@ -20,7 +20,7 @@ add_message_files(
   FILES
   ArmMotorCommand.msg
   ArmStatusFeedback.msg
-  ProcessedControllerInput.msg
+  ArmControllerInput.msg
 )
 
 
