Camera selection working

--- a/UI_App/CMakeLists.txt
+++ b/UI_App/CMakeLists.txt
@@ -31,5 +31,7 @@ catkin_package(
 catkin_install_python(PROGRAMS
   src/main.py
   src/camera_pub.py
+  src/camera_publisher.py
+  src/camera_subscriber.py
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
