add cmake for gps movement sim

--- a/ui_app/CMakeLists.txt
+++ b/ui_app/CMakeLists.txt
@@ -31,5 +31,6 @@ catkin_package(
 catkin_install_python(PROGRAMS
   src/main.py
   test/gps_test.py
+  test/gps_movement_sim.py
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
