--- a/odrive_interface/CMakeLists.txt
+++ b/odrive_interface/CMakeLists.txt
@@ -37,6 +37,6 @@ catkin_package(
 
 catkin_install_python(PROGRAMS
   src/ODrive.py
-  src/odrive_utils.py
+  src/init_functions.py
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
