--- a/odrive_interface/CMakeLists.txt
+++ b/odrive_interface/CMakeLists.txt
@@ -18,7 +18,8 @@ catkin_python_setup()
 ## Generate messages in the 'msg' folder
 add_message_files(
   FILES
-  Errors.msg
+  MotorError.msg
+  MotorState.msg
 )
 
 generate_messages(
