Recompiled ros1 packages to ros2

--- a/drive_control/CMakeLists.txt
+++ b/drive_control/CMakeLists.txt
@@ -1,41 +1,30 @@
-cmake_minimum_required(VERSION 3.0.2)
+cmake_minimum_required(VERSION 3.5)
 project(drive_control)
-
 
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
-find_package(catkin REQUIRED COMPONENTS 
-    roscpp
-    rospy
-    std_msgs
-    message_generation
-    geometry_msgs
-)
 
-
-catkin_python_setup()
+find_package(rosidl_default_generators REQUIRED)
+find_package(ament_cmake REQUIRED)
+find_package(rclcpp REQUIRED)
+find_package(rclpy REQUIRED)
+find_package(std_msgs REQUIRED)
+find_package(geometry_msgs REQUIRED)
+set(CMAKE_CXX_STANDARD 1 4)
 
 ## Generate messages in the 'msg' folder
-add_message_files(
-  FILES
-  WheelSpeed.msg
-)
 
-generate_messages(
+rosidl_generate_interfaces(
+    ${PROJECT_NAME}
+        msg/WheelSpeed.msg
     DEPENDENCIES
-    std_msgs
+        
 )
 
-catkin_package(
-    CATKIN_DEPENDS 
-    roscpp
-    rospy 
-    std_msgs
-    geometry_msgs
-    LIBRARIES drive_control
-    CATKIN_DEPENDS message_runtime
-)
+ament_export_libraries(drive_control)
+ament_export_dependencies(rclcpp rclpy std_msgs geometry_msgs)
+ament_package()
 
 catkin_install_python(PROGRAMS
   src/drive_control_node.py
