--- a/human_control_interface/CMakeLists.txt
+++ b/human_control_interface/CMakeLists.txt
@@ -1,39 +1,26 @@
-cmake_minimum_required(VERSION 2.8.3)
+cmake_minimum_required(VERSION 3.5)
 project(human_control_interface)
 
-find_package(catkin REQUIRED COMPONENTS
-  roscpp
-  rospy
-  std_msgs
-  message_generation
+find_package(rosidl_default_generators REQUIRED)
+find_package(ament_cmake REQUIRED)
+find_package(rclcpp REQUIRED)
+find_package(rclpy REQUIRED)
+find_package(std_msgs REQUIRED)
+set(CMAKE_CXX_STANDARD 1 4)
+
+rosidl_generate_interfaces(
+    ${PROJECT_NAME}
+        msg/Joystick_input.msg
+        msg/Gamepad_input.msg
+    DEPENDENCIES
+        
 )
 
-catkin_python_setup()
-
-add_message_files(
-  FILES
-  Joystick_input.msg
-  Gamepad_input.msg
-)
-
-generate_messages(
-  DEPENDENCIES
-  std_msgs
-)
-
-catkin_package(
-  CATKIN_DEPENDS 
-  roscpp
-  rospy 
-  std_msgs
-  message_runtime
-  LIBRARIES human_control_interface
-)
+ament_export_libraries(human_control_interface)
+ament_package()
 
 catkin_install_python(PROGRAMS 
   src/Controller/Joystick.py
   src/Controller/Gamepad.py
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
-
-
 
