--- a/rover_system/CMakeLists.txt
+++ b/rover_system/CMakeLists.txt
@@ -1,14 +1,11 @@
-cmake_minimum_required(VERSION 3.0.2)
+cmake_minimum_required(VERSION 3.5)
 project(rover_system)
+find_package(ament_cmake REQUIRED)
+find_package(std_msgs REQUIRED)
 
-find_package(catkin REQUIRED COMPONENTS
-  std_msgs
-)
-
-catkin_package(
-  CATKIN_DEPENDS 
-  LIBRARIES human_control_interface
-)
+ament_export_libraries(human_control_interface)
+ament_export_dependencies()
+ament_package()
 
 ## Mark other files for installation (e.g. launch and bag files, etc.)
 install(FILES
@@ -17,5 +14,5 @@ install(FILES
    rover_robot.launch
    rover_sim_manual.launch
    # myfile2
-   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+   DESTINATION share/${PROJECT_NAME}
 )
