--- a/human_control_interface/package.xml
+++ b/human_control_interface/package.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0"?>
-<package format="2">
+<?xml-model
+  href="http://download.ros.org/schema/package_format3.xsd"
+  schematypens="http://www.w3.org/2001/XMLSchema"?>
+<package format="3">
   <name>human_control_interface</name>
   <version>1.0.1</version>
   <description>The human_control_interface package</description>
@@ -10,21 +13,25 @@
 
   <author email="alexandre.coulombe@mail.mcgill.ca">Alexandre Coulombe</author>
 
-  <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>roscpp</build_depend>
-  <build_depend>rospy</build_depend>
+  <buildtool_depend>ament_cmake</buildtool_depend>
+  <buildtool_depend>rosidl_default_generators</buildtool_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>message_generation</build_depend>
-  <build_export_depend>roscpp</build_export_depend>
-  <build_export_depend>rospy</build_export_depend>
+  <build_depend>rclcpp</build_depend>
+  <build_depend>rclpy</build_depend>
   <build_export_depend>std_msgs</build_export_depend>
   <build_export_depend>message_generation</build_export_depend>
-  <exec_depend>roscpp</exec_depend>
-  <exec_depend>rospy</exec_depend>
+  <build_export_depend>rclcpp</build_export_depend>
+  <build_export_depend>rclpy</build_export_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>message_runtime</exec_depend>
+  <exec_depend>rclcpp</exec_depend>
+  <exec_depend>rclpy</exec_depend>
+  <exec_depend>rosidl_default_runtime</exec_depend>
 
   <export>
+    <build_type>ament_cmake</build_type>
 
   </export>
+  <member_of_group>rosidl_interface_packages</member_of_group>
 </package>
