--- a/ros_introspection/package.xml
+++ b/ros_introspection/package.xml
@@ -22,5 +22,8 @@
   <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-ruamel.yaml</exec_depend>
   <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-yaml</exec_depend>
   <test_depend>roslint</test_depend>
+  <export>
+    <build_type>ament_python</build_type>
+  </export>
 
 </package>
