--- a/rover_system/package.xml
+++ b/rover_system/package.xml
@@ -22,11 +22,12 @@
   <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
 
 
-  <buildtool_depend>catkin</buildtool_depend>
+  <buildtool_depend>ament_cmake</buildtool_depend>
   
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- Other tools can request additional information be placed here -->
+    <build_type>ament_cmake</build_type>
 
   </export>
 </package>
