--- a/.github/workflows/sanity-check.yml
+++ b/.github/workflows/sanity-check.yml
@@ -44,12 +44,12 @@ jobs:
         run: |
           cd ~
           mkdir --parents catkin_ws/src
-          ln -s $GITHUB_WORKSPACE
+          ln -s $GITHUB_WORKSPACE ~/catkin_ws/src
           
       - name: Catkin Build
         shell: bash
         run: |
-            source /opt/ros/noetic/setup.bash
             cd ~/catkin_ws
+            source devel/setup.bash
             catkin init
             catkin build
