fix: catkin missing packages

--- a/.github/workflows/sanity-check.yml
+++ b/.github/workflows/sanity-check.yml
@@ -52,4 +52,4 @@ jobs:
             source /opt/ros/noetic/setup.bash
             cd ~/catkin_ws
             catkin init
-            catkin build
+            catkin build -DPYTHON_EXECUTABLE=/usr/bin/python3
