ajax dependency and test-page component

--- a/angular_ui_app/tsconfig.json
+++ b/angular_ui_app/tsconfig.json
@@ -24,7 +24,8 @@
       "dom"
     ],
     "types": [
-      "webpack-env"
+      "webpack-env",
+      "jquery" //added
     ]
   },
   "angularCompilerOptions": {
