--- a/angular_ui_app/package.json
+++ b/angular_ui_app/package.json
@@ -18,7 +18,9 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "ajax": "^0.0.4",
     "bootstrap": "^5.3.1",
+    "jquery": "^3.7.1",
     "roslib": "^1.3.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -29,6 +31,7 @@
     "@angular/cli": "~16.2.1",
     "@angular/compiler-cli": "^16.2.0",
     "@types/jasmine": "~4.3.0",
+    "@types/jquery": "^3.5.25",
     "@types/node": "^20.5.9",
     "@types/roslib": "^1.3.1",
     "@types/webpack-env": "^1.18.1",
