--- a/autonomy/CMakeLists.txt
+++ b/autonomy/CMakeLists.txt
@@ -157,6 +157,7 @@ include_directories(
 ## in contrast to setup.py, you can choose the destination
 catkin_install_python(PROGRAMS
    scripts/mapping.py
+   scripts/prm/dynamic_prm.py
    DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
