--- a/.github/workflows/sanity-check.yml
+++ b/.github/workflows/sanity-check.yml
@@ -45,14 +45,17 @@ jobs:
           cd ~
           mkdir --parents catkin_ws/src
           ln -s $GITHUB_WORKSPACE ~/catkin_ws/src
-          
-      - name: Catkin Build
-        shell: bash
+
+      - name: Install Intel Realsense SDK
         run: |
             sudo apt-get install ros-noetic-ddynamic-reconfigure
             cd $GITHUB_WORKSPACE/SETUP_SCRIPTS
             ./installLibrealsense.sh
             ./buildLibrealsense.sh
+          
+      - name: Catkin Build
+        shell: bash
+        run: |
             source /opt/ros/noetic/setup.bash
             cd ~/catkin_ws
             catkin init
