--- a/.github/workflows/sanity-check.yml
+++ b/.github/workflows/sanity-check.yml
@@ -21,6 +21,12 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.8'
+          
+      - name: cuda-toolkit
+        uses: Jimver/cuda-toolkit@v0.2.11
+              id: cuda-toolkit
+              with:
+                cuda: '12.1.0'
 
       - name: Setup ROS
         run: |
