--- a/.github/workflows/sanity-check.yml
+++ b/.github/workflows/sanity-check.yml
@@ -13,7 +13,14 @@ jobs:
   test:
     runs-on: ubuntu-20.04
     name: Catkin Build Test
-    steps:    
+    steps:
+    
+      - name: Install Cuda Toolkit
+      - uses: Jimver/cuda-toolkit@v0.2.11
+        id: cuda-toolkit
+        with:
+          cuda: '12.1.0'   
+
       - name: Checkout Repository
         uses: actions/checkout@v2
         
@@ -21,12 +28,6 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.8'
-
-      - name: cuda-toolkit
-        uses: Jimver/cuda-toolkit@v0.2.11
-        id: cuda-toolkit
-        with:
-          cuda: '11.6'
 
       - name: Setup ROS
         run: |
