--- a/angular_ui_app/package.json
+++ b/angular_ui_app/package.json
@@ -28,7 +28,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.2.1",
-    "@angular/cli": "~16.2.1",
+    "@angular/cli": "^16.1.0",
     "@angular/compiler-cli": "^16.2.0",
     "@types/jasmine": "~4.3.0",
     "@types/jquery": "^3.5.25",
