--- a/front_test_pkg/CMakeLists.txt
+++ b/front_test_pkg/CMakeLists.txt
@@ -159,8 +159,8 @@ include_directories(
 ## Mark executable scripts (Python etc.) for installation
 ## in contrast to setup.py, you can choose the destination
 catkin_install_python(PROGRAMS
-  scripts/s2.py
-  scripts/sub.py
+  scripts/publisher.py
+  scripts/subscriber.py
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
