--- a/angular_ui_app/package.json
+++ b/angular_ui_app/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "bootstrap": "^5.3.1",
+    "leaflet": "^1.7.1",
     "roslib": "^1.3.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -29,6 +30,7 @@
     "@angular/cli": "~16.2.1",
     "@angular/compiler-cli": "^16.2.0",
     "@types/jasmine": "~4.3.0",
+    "@types/leaflet": "^1.9.8",
     "@types/node": "^20.5.9",
     "@types/roslib": "^1.3.3",
     "@types/webpack-env": "^1.18.1",
