gui tester done

--- a/odrive_interface_arm/CMakeLists.txt
+++ b/odrive_interface_arm/CMakeLists.txt
@@ -39,7 +39,7 @@ catkin_package(
 catkin_install_python(PROGRAMS
   src/node_odrive.py
   src/node_brushed_test.py
-  src/node_arm_viz.py
+  src/node_arm_manual_control.py
 
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
