--- a/angular_ui_app/package.json
+++ b/angular_ui_app/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^16.2.0",
     "ajax": "^0.0.4",
     "bootstrap": "^5.3.1",
+    "express": "^4.19.1",
     "jquery": "^3.7.1",
     "roslib": "^1.3.0",
     "rxjs": "~7.8.0",
