--- a/rover_gazebo/config/control.yml
+++ b/rover_gazebo/config/control.yml
@@ -5,8 +5,8 @@ rover_joint_state_controller:
 rover_velocity_controller:
     type        : "diff_drive_controller/DiffDriveController"
     publish_rate: 50
-    left_wheel  : ['left_wheel','rear_left_wheel']
-    right_wheel : ['right_wheel','rear_right_wheel']
+    left_wheel  : ['right_wheel','rear_right_wheel']
+    right_wheel : ['left_wheel','rear_left_wheel']
     # rear_left_wheel : 'rear_left_wheel'
     # rear_right_wheel: 'rear_right_wheel'
     publish_rate: 50              # default: 50
