--- a/odrive_interface/CMakeLists.txt
+++ b/odrive_interface/CMakeLists.txt
@@ -42,6 +42,7 @@ catkin_install_python(PROGRAMS
   src/node_odrive_drive.py
   src/node_brushed.py
   src/node_arm_control_gui.py
+  src/ros_path_config.py
 
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
