--- a/angular_ui_app/angular.json
+++ b/angular_ui_app/angular.json
@@ -96,7 +96,8 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/assets/map-pins"
             ],
             "styles": [
               "src/styles.scss"
