--- a/angular_ui_app/package.json
+++ b/angular_ui_app/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^16.2.0",
     "bootstrap": "^5.3.1",
     "leaflet": "^1.9.4",
+    "leaflet-rotatedmarker": "^0.2.0",
     "roslib": "^1.4.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
