--- a/angular_ui_app/package.json
+++ b/angular_ui_app/package.json
@@ -32,6 +32,7 @@
     "@angular/compiler-cli": "^16.2.0",
     "@types/jasmine": "~4.3.0",
     "@types/leaflet": "^1.9.8",
+    "@types/leaflet-rotatedmarker": "^0.2.5",
     "@types/node": "^20.5.9",
     "@types/roslib": "^1.3.1",
     "@types/webpack-env": "^1.18.1",
