Just npm install

--- a/.github/workflows/sanity-check.yml
+++ b/.github/workflows/sanity-check.yml
@@ -51,8 +51,9 @@ jobs:
 
       - name: Setup Angular Workflow
         run: |
-          npm install -g @angular/cli
           
+          npm install
+
       - name: Catkin Build
         shell: bash
         run: |
