Added transmissions to each joint. Declared position controllers for each joint. Added controllers to Rover launch file.

--- a/rover_gazebo/config/control.yml
+++ b/rover_gazebo/config/control.yml
@@ -53,3 +53,39 @@ rover_velocity_controller:
         max_acceleration       : 1  # rad/s^2
         has_jerk_limits        : true
         max_jerk               : 2.5  # rad/s^3
+
+
+joint_1_controller:
+    type: position_controllers/JointPositionController
+    joint: joint_1
+    pid: {p: 100.0, i: 0.01, d: 10.0}
+
+joint_2_controller:
+    type: velocity_controllers/JointVelocityController
+    joint: joint_2
+    pid: {p: 100.0, i: 0.01, d: 10.0}
+
+joint_3_controller:
+    type: velocity_controllers/JointVelocityController
+    joint: joint_3
+    pid: {p: 100.0, i: 0.01, d: 10.0}
+
+joint_4_controller:
+    type: velocity_controllers/JointVelocityController
+    joint: joint_4
+    pid: {p: 100.0, i: 0.01, d: 10.0}
+
+joint_5_controller:
+    type: velocity_controllers/JointVelocityController
+    joint: joint_5
+    pid: {p: 100.0, i: 0.01, d: 10.0}
+
+joint_6_controller:
+    type: velocity_controllers/JointVelocityController
+    joint: joint_6
+    pid: {p: 100.0, i: 0.01, d: 10.0}
+
+joint_7_controller:
+    type: velocity_controllers/JointVelocityController
+    joint: joint_7
+    pid: {p: 100.0, i: 0.01, d: 10.0}
