Squashed commit of the following:
commit 0d56d5a2b1dd9f7c6a1963beaa9321b075eaddc5
Author: Your Name <you@example.com>
Date:   Fri Jul 26 18:29:30 2024 -0700

    double rviz arm WIP

commit e4c0d74632ede332224419cd963e40ce7f3b3ccb
Author: Your Name <you@example.com>
Date:   Thu Jul 25 21:23:26 2024 -0700

    fixup! joystick update

commit 4af4ed6b7faf71f2b9a4556cad64efd2f4d04f85
Author: mn297 <Peterwayne3293@gmail.com>
Date:   Wed Jul 24 22:34:29 2024 -0400

    fixup! cleanup odrive logic

commit 594c88182c1cdf25f6061ec8dbeb22ea81b892e0
Author: mn297 <Peterwayne3293@gmail.com>
Date:   Sun Jul 21 00:15:07 2024 -0400

    cleanup odrive logic

commit 704314958149dc132d2260abf482d4207c8d412b
Author: mn297 <Peterwayne3293@gmail.com>
Date:   Sat Jul 20 22:18:34 2024 -0400

    refactor drive code

commit 1f572d50a48e370bec128e4ff440a3b296596772
Author: mn297 <peterwayne3293@gmail.com>
Date:   Sat Jul 20 12:00:54 2024 -0400

    joystick update

commit 7b6284bb53e8ea25c33dcdb9c87c407e757e178b
Author: mn297 <peterwayne3293@gmail.com>
Date:   Fri Jul 19 19:48:57 2024 -0400

    added arm viz

commit b7251dca7f028c1125b107dcc775ebbcd191b5c7
Author: Your Name <peterwayne3293@gmail.com>
Date:   Mon Mar 11 18:17:31 2024 -0400

    formatter arm_control

commit 5ccb2dc80625238264f1b1609f17b6acc934d443
Author: mn297 <peterwayne3293@gmail.com>
Date:   Mon Jul 15 19:44:54 2024 -0400

    cleanup GUI code

commit 6d0fc4735b28a93f210288250df2f4e505a22e84
Author: mn297 <peterwayne3293@gmail.com>
Date:   Sun Jul 7 23:07:50 2024 -0400

    refactored structure

commit 95a24dae18dcdc637ea066ef106a2fce9824869d
Author: mn297 <Peterwayne3293@gmail.com>
Date:   Sat Jun 29 21:59:18 2024 -0400

    added limits variable for arm

commit 1216fc379c5bf81e2862f394a9ac692ac583ddc8
Author: mn297 <Peterwayne3293@gmail.com>
Date:   Thu Jun 27 19:16:11 2024 -0400

    cleaning up odrive logic

commit c73ee0e553b3eff64dea19183899912c623faf81
Author: mn297 <Peterwayne3293@gmail.com>
Date:   Thu Jun 27 

--- a/odrive_interface/CMakeLists.txt
+++ b/odrive_interface/CMakeLists.txt
@@ -20,6 +20,7 @@ add_message_files(
   FILES
   MotorError.msg
   MotorState.msg
+  ODriveStatus.msg
 )
 
 generate_messages(
@@ -37,7 +38,11 @@ catkin_package(
 )
 
 catkin_install_python(PROGRAMS
-  src/ODrive.py
+  src/node_odrive_arm.py
+  src/node_odrive_drive.py
+  src/node_brushed.py
+  src/node_control_gui.py
+  src/ros_path_config.py
 
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
