--- a/odrive_interface_old/package.xml
+++ b/odrive_interface_old/package.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>odrive_interface</name>
+  <name>odrive_interface_old</name>
   <version>0.0.0</version>
-  <description>Package that interfaces with the ODrives motors</description>
+  <description>Package that interfaces with the ODrives</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="martin.nguyen3@mail.mcgill.ca">Martin Nguyen</maintainer>
+  <maintainer email="eren.ozturk@mail.mcgill.ca">Eren Ozturk</maintainer>
 
 
   <license>MIT</license>
 
-  <author email="martin.nguyen3@mail.mcgill.ca">Martin Nguyen</author>
+  <author email="eren.ozturk@mail.mcgill.ca">Eren Ozturk</author>
   
   <build_depend>message_generation</build_depend>
   <build_export_depend>message_generation</build_export_depend>
