--- a/angular_ui_app/package.json
+++ b/angular_ui_app/package.json
@@ -22,6 +22,7 @@
     "bootstrap": "^5.3.1",
     "leaflet": "^1.9.4",
     "leaflet-rotatedmarker": "^0.2.0",
+    "leaflet.offline": "^3.1.0",
     "roslib": "^1.3.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
